@@ -9,7 +9,6 @@
 		<version>develop-SNAPSHOT</version>
 	</parent>
 
-	<groupId>org.sagebionetworks</groupId>
 	<artifactId>integration-test</artifactId>
 	<packaging>jar</packaging>
 	<name>Integration Tests for All services</name>
@@ -135,6 +134,23 @@
 							<org.sagebionetworks.rest.api.endpoint>${tomcat.endpoint}/${org.sagebionetworks.repository.context}</org.sagebionetworks.rest.api.endpoint>
 						</systemProperties>
 					</container>
+					<configuration>
+						<properties>
+						    <cargo.jvmargs>
+								-Xmx1024m
+								-Xms128m
+								-XX:MaxPermSize=256m
+							</cargo.jvmargs>
+							<!-- Add the following to 'remote debug' the entire deployment stack
+							<cargo.jvmargs>
+								-Xdebug
+								-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8989
+								-Xnoagent
+								-Djava.compiler=NONE
+							</cargo.jvmargs>
+							-->
+						</properties>
+					</configuration>
 					<type>standalone</type>
 					<home>${project.build.directory}/tomcat7x/container/${tomcat-file}/bin</home>
 					<deployables>
@@ -142,36 +158,28 @@
 							<groupId>org.sagebionetworks</groupId>
 							<artifactId>services-authentication</artifactId>
 							<type>war</type>
-							<!-- url to ping to know if deployable is done or not -->
-							<!-- <pingURL>${tomcat.endpoint}/${org.sagebionetworks.auth.context}</pingURL> -->
-							<!-- How long do we wait until the we timeout (in ms) -->
-							<!-- <pingTimeout>2000</pingTimeout> -->
 						</deployable>
 						<deployable>
 							<groupId>org.sagebionetworks</groupId>
 							<artifactId>services-repository</artifactId>
 							<type>war</type>
-							<!-- url to ping to know if deployable is done or not -->
-							<!-- <pingURL>${org.sagebionetworks.repository.service.base.url}/dataset/test</pingURL> -->
-							<!-- How long do we wait until the we timeout (in ms) -->
-							<!-- <pingTimeout>2000</pingTimeout> -->
 						</deployable>
 						<deployable>
 							<groupId>org.sagebionetworks</groupId>
 							<artifactId>services-search</artifactId>
 							<type>war</type>
 						</deployable>
+						<deployable>
+							<groupId>org.sagebionetworks</groupId>
+							<artifactId>services-dynamo</artifactId>
+							<type>war</type>
+						</deployable>
+						<deployable>
+							<groupId>org.sagebionetworks</groupId>
+							<artifactId>services-rds</artifactId>
+							<type>war</type>
+						</deployable>
 					</deployables>
-					<properties>
-<!-- 					Add the following to 'remote debug' the entire deployment stack
-						<cargo.jvmargs>
-							-Xdebug
-							-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8989
-							-Xnoagent
-							-Djava.compiler=NONE
-						</cargo.jvmargs>
--->
-					</properties>
 				</configuration>
 
 				<executions>
@@ -217,7 +225,6 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>com.springsource.javax.servlet</artifactId>
-			<version>2.5.0</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -230,6 +237,16 @@
 		<dependency>
 			<groupId>org.sagebionetworks</groupId>
 			<artifactId>services-search</artifactId>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.sagebionetworks</groupId>
+			<artifactId>services-rds</artifactId>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.sagebionetworks</groupId>
+			<artifactId>services-dynamo</artifactId>
 			<type>war</type>
 		</dependency>
 
